Subiendo home - informacion personal

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         <div class="main_menu">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container box_1620">
-                    <!-- La marca y la alternancia se agrupan para una mejor visualización móvil -->
                     <!-- <a class="navbar-brand logo_h" href="index"><img src="img/logo.png" alt="" ></a> -->Angel
                     Lizarzado
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -53,6 +52,57 @@
             </nav>
         </div>
     </header>
+
+    <!--================Home Banner =================-->
+    <section class="home_banner_area">
+        <div class="black_1">
+            <div class="container box_1620 fade-in" id="index">
+                <div class="banner_inner d-flex align-items-center">
+                    <div class="banner_content">
+                        <div class="media">
+                            <div class="d-flex">
+                                <!--	<img src="img/" alt="..." loading="lazy" alt="main_image"> -->
+                            </div>
+                            <div class="media-body">
+                                <div class="personal_text tjust">
+                                    <h5>Hola a todos, yo soy</h5>
+                                    <div class="Hello">
+                                        <h3>Angel Lizarzado</h3>
+                                    </div>
+                                    <h4>Desarrollador Full Stack</h4>
+
+                                    <p>Diseño y desarrollo experiencias web.<br>Estudiante de Immune en Master de
+                                        desarrollo de aplicaciones web y moviles <br>
+                                    </p>
+
+
+
+                                    <ul class="list basic_info">
+                                        <li><a href="mailto:angel.lizarzado98@gmail.com" target="_blank"><i
+                                                    class="fa fa-envelope-o" aria-hidden="true"></i>Mail-Box</a></li>
+                                        <li><a href="" target="_blank"><i class="fa fa-location-arrow"
+                                                    aria-hidden="true"></i>Barqusimeto - Venezuela</a></li>
+                                    </ul>
+
+
+
+                                    <ul class="list personal_social">
+                                        <li><a href="https://github.com/Angel_Lizarzado" target="_blank"><i
+                                                    class="fa fa-github"></i></a></li>
+                                        <li><a href="https://twitter.com/angel_lzdo" target=" _blank"><i
+                                                    class="fa fa-twitter"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/in/MitsuDev/" target=" _blank"><i
+                                                    class="fa fa-linkedin"></i></a></li>
+
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
