--- a/index.html
+++ b/index.html
@@ -103,6 +103,88 @@
             </div>
         </div>
     </section>
+
+    <!--================About-me Area =================-->
+    <section class="welcome_area p_120 fade-in tjust" id="about-me">
+        <div class="container">
+            <div class="row welcome_inner">
+                <div class="col-lg-6">
+                    <div class="welcome_text tjust">
+                        <h4>Sobre mi</h4>
+                        <p>Soy un apasionado del diseño web y utilizo Python como lenguaje complementario para el
+                            backend de mis proyectos. Me encanta crear sitios web hermosos y funcionales que sean
+                            fáciles de usar y accesibles para todos los usuarios.<br>
+
+                            <br>Además de mi pasión por el diseño web y la programación, me considero una persona
+                            creativa y me encanta trabajar en proyectos con impacto positivo en la vida de las personas.
+                        </p>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="wel_item">
+                                    <i class="fa fa-files-o" aria-hidden="true"></i>
+                                    <h4>04</h4>
+                                    <p> Proyectos <br> Hechos
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="tools_expert">
+                        <div class="skill_main">
+                            <div class="skill_item">
+                                <h4>HTML:5 <i class="fab fa-wordpress" aria-hidden="true"></i> <span
+                                        class="counter">70</span>%</h4>
+                                <div class="progress_br">
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" aria-valuemin="0"
+                                            aria-valuemax="100" style="width: 70%;"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="skill_item">
+                                <h4>CSS3 <i class="fab fa-wordpress" aria-hidden="true"></i> <span
+                                        class="counter">50</span>%</h4>
+                                <div class="progress_br">
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" aria-valuemin="0"
+                                            aria-valuemax="100" style="width: 50%;"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="skill_item">
+                                <h4>Javascript <i class="fab fa-wordpress" aria-hidden="true"></i> <span
+                                        class="counter">20</span>%</h4>
+                                <div class="progress_br">
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" aria-valuemin="0"
+                                            aria-valuemax="100" style="width: 20%;"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="skill_item">
+                                <h4>Python <i class="fab fa-wordpress" aria-hidden="true"></i> <span
+                                        class="counter">30</span>%</h4>
+                                <div class="progress_br">
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" aria-valuemin="0"
+                                            aria-valuemax="100" style="width: 30%;"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+
+
+
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
