Tengo un problema con los botones de cambio de experiencia y educacion, arreglar proximamente

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <meta name="description" content="Angel Lizarzado un desarrollador Full Stack">
     <meta property="og:title" content="Acerca de Angel Lizarzado" />
-    <meta property="og:url" content="https://angels.code/" />
+    <meta property="og:url" content="https:/..../" />
     <meta property="og:description" content="Acerca de Angel Lizarzado un desarrollador web full stack">
     <meta property="og:image" content="/image.png" />
     <meta property="og:type" content=”Portfolio” />
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="asset/css/fonts.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="assets/vendors/animate-css/">
 </head>
 
 <body>
@@ -185,6 +186,129 @@
             </div>
         </div>
     </section>
+
+    <!--================My info Area =================-->
+    <section class="mytabs_area p_120">
+        <div class="container">
+            <div class="tabs_inner">
+                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab"
+                            aria-controls="home" aria-selected="true">Mi experiencia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
+                            aria-controls="profile" aria-selected="false">Mi educación</a>
+                    </li>
+                </ul>
+                <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                        <ul class="list">
+                            <li>
+
+                                <div class="media">
+                                    <div class="d-flex">
+                                        <p>Mar 2018 presenté</p>
+                                    </div>
+                                    <div class="media-body">
+                                        <h4>AgroIndustria</h4>
+                                        <p>Junior Web Developer <br />Full Stack <br> Barquisimeto, Lara</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+
+                                <div class="media">
+                                    <div class="d-flex">
+                                        <p>May 2020 presenté</p>
+                                    </div>
+                                    <div class="media-body">
+                                        <h4>Habbisco</h4>
+                                        <p>Diseño CMS de Habbo <br />Full Stack <br> Ciudad de Mexico, Mexico</p>
+
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+
+                                <div class="media">
+                                    <div class="d-flex">
+                                        <p>May 2022 presenté</p>
+                                    </div>
+                                    <div class="media-body">
+                                        <h4>Generic Online</h4>
+                                        <p>CMS para gestion, recargas y compras de un juego MMORPG <br />Full Stack <br>
+                                            Madrid, España</p>
+
+                                    </div>
+                                </div>
+                            </li>
+
+                        </ul>
+                    </div>
+                    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                        <ul class="list">
+                            <li>
+                                <span></span>
+                                <div class="media">
+                                    <div class="d-flex">
+                                        <p>Autodidacta - 2016</p>
+                                    </div>
+                                    <div class="media-body">
+                                        <h4>Desarrollo web Frontend</h4>
+                                        <p>Comencé en este año a desarrollar proyectos web, con html css y js,
+                                            comenzando pequeños proyectos<br />Duaca - Lara</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <span></span>
+                                <div class="media">
+                                    <div class="d-flex">
+                                        <p>Autodidacta - 2018</p>
+                                    </div>
+                                    <div class="media-body">
+                                        <h4>Desarrollo web Backend </h4>
+                                        <p> Comencé a aprender y utilizar php en mis proyectos dando a luz mis primeros
+                                            CMS <br />Duaca - Barquisimeto </p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <span></span>
+                                <div class="media">
+                                    <div class="d-flex">
+                                        <p>Autodidacta - 2021</p>
+                                    </div>
+                                    <div class="media-body">
+                                        <h4>Desarrollo con Python</h4>
+                                        <p> Desarrollo de aplicaciones con Python, y usar el mismo para Backend en web
+                                            con Flask y Django </p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <span></span>
+                                <div class="media">
+                                    <div class="d-flex">
+                                        <p>Cursos Udemy 2023</p>
+                                    </div>
+                                    <div class="media-body">
+                                        <h4>Comienzo a conseguir certificados</h4>
+                                        <p> Actualmente tengo certificado en python con flask, y api rest, y actualmente
+                                            estoy certificandome en javascript </p>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
