--- a/index.html
+++ b/index.html
@@ -2,23 +2,49 @@
 <html lang="es">
 
 <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YEWQN11NJP"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-YEWQN11NJP');
+    </script>
 
     <!-- meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="img/favicon.png" type="image/png">
+    <link rel="icon" href="assets/img/favicon.png" type="image/png">
     <title>Angel Lizarzado</title>
 
-    <meta name="description" content="Angel Lizarzado un desarrollador Full Stack">
-    <meta property="og:title" content="Acerca de Angel Lizarzado" />
-    <meta property="og:url" content="https:/..../" />
-    <meta property="og:description" content="Acerca de Angel Lizarzado un desarrollador web full stack">
-    <meta property="og:image" content="/image.png" />
-    <meta property="og:type" content=”Portfolio” />
+    <!--Meta Description-->
+
+    <meta name="description" content="Portfolio Angel Lizarzado">
+
+    <!--Meta Keywords-->
+    <meta name="keywords"
+        content="Portfolio, Angel Lizarzado, Angel, Lizarzado, MitsuDev, Mitsu, Portfolio Angel Lizarzado, Portfolio MitsuDev, Full-Stack, Programador web, Angel Lizarzado programador web, Angel Lizarzado Programador web Full-Stack, Angel Programador web full stack, Angel programador, Angel web">
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Angel Lizarzado Portfolio">
+    <meta itemprop="description" content="Portfolio Angel Lizarzado programador web full-stack">
+    <meta itemprop="image" content="http://i.ibb.co/https://i.ibb.co/M9QZc1L/Screenshot-10.png">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://angel-lizarzado.web.app">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Angel Lizarzado Portfolio">
+    <meta property="og:description" content="Portfolio Angel Lizarzado programador web full-stack">
+    <meta property="og:image" content="http://i.ibb.co/https://i.ibb.co/M9QZc1L/Screenshot-10.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Angel Lizarzado Portfolio">
+    <meta name="twitter:description" content="Portfolio Angel Lizarzado programador web full-stack">
+    <meta name="twitter:image" content="http://i.ibb.co/https://i.ibb.co/M9QZc1L/Screenshot-10.png">
 
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="asset/css/fonts.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/fonts.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="stylesheet" href="assets/vendors/animate-css/">
 </head>
@@ -29,6 +55,7 @@
         <div class="main_menu">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container box_1620">
+                    <!-- Brand and toggle get grouped for better mobile display -->
                     <!-- <a class="navbar-brand logo_h" href="index"><img src="img/logo.png" alt="" ></a> -->Angel
                     Lizarzado
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -38,12 +65,12 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <!-- Enlaces de nav -->
+                    <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav ml-auto">
-                            <li class="nav-item active"><a class="nav-link" href="#index">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#about-me">Acerca de</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#skills">Habilidades</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="/#index">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#about-me">Acerca
+                                    de</a></li>
                             <li class="nav-item"><a class="nav-link" href="#projects">Trabajos</a></li>
                             <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
 
@@ -54,6 +81,7 @@
         </div>
     </header>
 
+
     <!--================Home Banner =================-->
     <section class="home_banner_area">
         <div class="black_1">
@@ -62,7 +90,7 @@
                     <div class="banner_content">
                         <div class="media">
                             <div class="d-flex">
-                                <!--	<img src="img/" alt="..." loading="lazy" alt="main_image"> -->
+                                <img src="assets/img/angel.png" alt="..." loading="lazy" alt="main_image">
                             </div>
                             <div class="media-body">
                                 <div class="personal_text tjust">
@@ -106,7 +134,7 @@
     </section>
 
     <!--================About-me Area =================-->
-    <section class="welcome_area p_120 fade-in tjust" id="about-me">
+    <section class="welcome_area fade-in tjust" id="about-me">
         <div class="container">
             <div class="row welcome_inner">
                 <div class="col-lg-6">
@@ -136,7 +164,7 @@
                     <div class="tools_expert">
                         <div class="skill_main">
                             <div class="skill_item">
-                                <h4>HTML:5 <i class="fab fa-wordpress" aria-hidden="true"></i> <span
+                                <h4>HTML:5 <i class="fab fa-html5" aria-hidden="true"></i> <span
                                         class="counter">70</span>%</h4>
                                 <div class="progress_br">
                                     <div class="progress">
@@ -146,8 +174,8 @@
                                 </div>
                             </div>
                             <div class="skill_item">
-                                <h4>CSS3 <i class="fab fa-wordpress" aria-hidden="true"></i> <span
-                                        class="counter">50</span>%</h4>
+                                <h4>CSS3 <i class="fab fa-css3" aria-hidden="true"></i> <span class="counter">50</span>%
+                                </h4>
                                 <div class="progress_br">
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" aria-valuemin="0"
@@ -156,7 +184,7 @@
                                 </div>
                             </div>
                             <div class="skill_item">
-                                <h4>Javascript <i class="fab fa-wordpress" aria-hidden="true"></i> <span
+                                <h4>Javascript <i class="fab fa-js " aria-hidden="true"></i> <span
                                         class="counter">20</span>%</h4>
                                 <div class="progress_br">
                                     <div class="progress">
@@ -166,7 +194,7 @@
                                 </div>
                             </div>
                             <div class="skill_item">
-                                <h4>Python <i class="fab fa-wordpress" aria-hidden="true"></i> <span
+                                <h4>Python <i class="fab fa-python" aria-hidden="true"></i> <span
                                         class="counter">30</span>%</h4>
                                 <div class="progress_br">
                                     <div class="progress">
@@ -188,21 +216,21 @@
     </section>
 
     <!--================My info Area =================-->
-    <section class="mytabs_area p_120">
+    <section class="mytabs_area">
         <div class="container">
             <div class="tabs_inner">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab"
-                            aria-controls="home" aria-selected="true">Mi experiencia</a>
+                        <a class="nav-link" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+                            aria-selected="false">My Experiences</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
-                            aria-controls="profile" aria-selected="false">Mi educación</a>
+                        <a class="nav-link active show" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
+                            aria-controls="profile" aria-selected="true">My Education</a>
                     </li>
                 </ul>
                 <div class="tab-content" id="myTabContent">
-                    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                    <div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
                         <ul class="list">
                             <li>
 
@@ -212,7 +240,7 @@
                                     </div>
                                     <div class="media-body">
                                         <h4>AgroIndustria</h4>
-                                        <p>Junior Web Developer <br />Full Stack <br> Barquisimeto, Lara</p>
+                                        <p>Junior Web Developer <br>Full Stack <br> Barquisimeto, Lara</p>
                                     </div>
                                 </div>
                             </li>
@@ -224,7 +252,7 @@
                                     </div>
                                     <div class="media-body">
                                         <h4>Habbisco</h4>
-                                        <p>Diseño CMS de Habbo <br />Full Stack <br> Ciudad de Mexico, Mexico</p>
+                                        <p>Diseño CMS de Habbo <br>Full Stack <br> Ciudad de Mexico, Mexico</p>
 
                                     </div>
                                 </div>
@@ -237,7 +265,7 @@
                                     </div>
                                     <div class="media-body">
                                         <h4>Generic Online</h4>
-                                        <p>CMS para gestion, recargas y compras de un juego MMORPG <br />Full Stack <br>
+                                        <p>CMS para gestion, recargas y compras de un juego MMORPG <br>Full Stack <br>
                                             Madrid, España</p>
 
                                     </div>
@@ -246,18 +274,18 @@
 
                         </ul>
                     </div>
-                    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                    <div class="tab-pane fade active show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                         <ul class="list">
                             <li>
                                 <span></span>
                                 <div class="media">
                                     <div class="d-flex">
-                                        <p>Autodidacta - 2016</p>
+                                        <p>Autodidacta - 2015</p>
                                     </div>
                                     <div class="media-body">
                                         <h4>Desarrollo web Frontend</h4>
                                         <p>Comencé en este año a desarrollar proyectos web, con html css y js,
-                                            comenzando pequeños proyectos<br />Duaca - Lara</p>
+                                            comenzando pequeños proyectos<br>Duaca - Lara</p>
                                     </div>
                                 </div>
                             </li>
@@ -270,7 +298,7 @@
                                     <div class="media-body">
                                         <h4>Desarrollo web Backend </h4>
                                         <p> Comencé a aprender y utilizar php en mis proyectos dando a luz mis primeros
-                                            CMS <br />Duaca - Barquisimeto </p>
+                                            CMS <br>Duaca - Barquisimeto </p>
                                     </div>
                                 </div>
                             </li>
@@ -294,9 +322,9 @@
                                         <p>Cursos Udemy 2023</p>
                                     </div>
                                     <div class="media-body">
-                                        <h4>Comienzo a conseguir certificados</h4>
-                                        <p> Actualmente tengo certificado en python con flask, y api rest, y actualmente
-                                            estoy certificandome en javascript </p>
+                                        <h4>Comienzo a certificarme</h4>
+                                        <p> Flask, y api rest
+                                        </p>
                                     </div>
                                 </div>
                             </li>
@@ -308,7 +336,50 @@
         </div>
     </section>
 
+    <!--================Footer area =================-->
 
+    <footer class="footer_area fade-in" id="contact">
+        <div class="container">
+            <div class="row footer_inner">
+                <div class="col-lg-6 col-sm-5">
+                    <aside class="f_widget ab_widget">
+                        <div class="f_title">
+                            <h2>Angel Lizarzado</h2>
+                        </div>
+                        <p>
+                        <h2> ¡Hola! Saludos<br> </h2>
+                        <h5> ¿Tienes un proyecto?</h5>
+                        <h5>¡Vamos a conectarnos, trabajo para aprender!</h5>
+
+
+                    </aside>
+                </div>
+                <div class="col-lg-6 col-sm-5">
+                    <aside class="f_widget social_widget">
+                        <div class="f_title">
+                            <h2>Social</h2>
+                        </div>
+                        <p>
+                        <h5>Mis redes. </h5>
+                        </p>
+                        <ul class="list">
+                            <li><a href="https://twitter.com/angel_lzdo"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://github.com/Angel-Lizarzado"><i class="fa fa-github"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/mitsudev/"><i class="fa fa-linkedin"></i></a></li>
+                            <div class="f_title">
+                                <h5 style="margin-top:20px">Respondere lo mas pronto posible</h5>
+                            </div>
+                        </ul>
+
+                    </aside>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="https://kit.fontawesome.com/da552db183.js" crossorigin="anonymous"></script>
+    <script src="assets/js/jquery-3.3.1.min.js"></script>
+    <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
 </body>
 
 </html>
