--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav ml-auto">
-                            <li class="nav-item active"><a class="nav-link" href="/#index">Home</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="#index">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="#about-me">Acerca
                                     de</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#projects">Trabajos</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="#projects">Trabajos</a></li>-->
                             <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
 
                         </ul>
