--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
     <meta name="twitter:image" content="http://i.ibb.co/https://i.ibb.co/M9QZc1L/Screenshot-10.png">
 
     <link rel="stylesheet" href="assets/css/bootstrap.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+
     <link rel="stylesheet" type="text/css" href="assets/css/fonts.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
-    <link rel="stylesheet" href="assets/vendors/animate-css/">
+    <link rel="stylesheet" href="assets/vendors/animate-css/animate.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -55,9 +56,7 @@
         <div class="main_menu">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container box_1620">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <!-- <a class="navbar-brand logo_h" href="index"><img src="img/logo.png" alt="" ></a> -->Angel
-                    Lizarzado
+                    Angel Lizarzado
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -65,13 +64,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav ml-auto">
                             <li class="nav-item active"><a class="nav-link" href="#index">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="#about-me">Acerca
                                     de</a></li>
                             <!-- <li class="nav-item"><a class="nav-link" href="#projects">Trabajos</a></li>-->
+                            <li class="nav-item"><a class="nav-link" href="#experience">Experiencia</a></li>
                             <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
 
                         </ul>
@@ -83,7 +82,7 @@
 
 
     <!--================Home Banner =================-->
-    <section class="home_banner_area">
+    <section class="home_banner_area" id="index">
         <div class="black_1">
             <div class="container box_1620 fade-in" id="index">
                 <div class="banner_inner d-flex align-items-center">
@@ -216,7 +215,7 @@
     </section>
 
     <!--================My info Area =================-->
-    <section class="mytabs_area">
+    <section class="mytabs_area" id="experience">
         <div class="container">
             <div class="tabs_inner">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
