--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
                         <span class="icon-bar"></span>
                     </button>
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-                        <ul class="nav navbar-nav menu_nav ml-auto">
+                        <ul style="margin: 0;" class="nav navbar-nav menu_nav ml-auto">
                             <li class="nav-item active"><a class="nav-link" href="#index">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="#about-me">Acerca
                                     de</a></li>
-                            <!-- <li class="nav-item"><a class="nav-link" href="#projects">Trabajos</a></li>-->
                             <li class="nav-item"><a class="nav-link" href="#experience">Experiencia</a></li>
                             <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link" href=""></a></li>
 
                         </ul>
                     </div>
